--- a/Week5/5.1/style.css
+++ b/Week5/5.1/style.css
@@ -1,7 +1,9 @@
 /*
 	Several CSS sections will be added from activity 5
 */
-
+*{
+  background: lightgray;
+}
 header > h1 {
   color: darkblue;
 }
@@ -13,6 +15,7 @@ body > form {
 /*  This styling sets up the flex container */
 .flex {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -24,27 +27,33 @@ body > form {
 
 /* Activity 5.1: Media queries
   -Add CSS that removes the border around the flex items */
-
-  @media print {
-    .flex > * {
-      border: none;
-    }  }
+@media print {
+  .flex > * {
+    border: none;
+  }
+}
 
 /* Activity 5.2: Media queries
   -Add CSS for when screen size is less than 700px */
-
-  @media (max-width: 700px) {
+  @media (max-width: 700px){
     .flex > * {
-      color:chocolate;
+      color: red;
     }
   }
 
+
 /* Activity 5.3: Media queries
   -Add CSS that checks for device hover capabilities */
-
+  @media (hover: hover) {
+    * :hover {
+      color: red;
+    }
+  }
 
 @media (min-width: 2000px) {
   * {
     color:orange;
   }
 }
+
+
